Inicio de sesión con Git

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ MONGO_URI = mongodb+srv://cecic24:4193531@codercluster.8naffdo.mongodb.net/ecomm
 GIT_CLIENT_ID = Iv1.49f5073f3369732a
 GIT_CLIENT_SECRET = 7fa1211c05d40cfb7442f2da58b7d2b440cdc96c
 GIT_CALLBACK_URL = http://localhost:8080/api/sessions/githubcallback
+GIT_CALLBACK_URL_RW = https://back-coder-proyecto-final-production.up.railway.app/api/sessions/githubcallback
 JWT_SECRET = clave-super-secreta-jwt-backend
 ADMIN_EMAIL = adminCoder@coder.com
 ADMIN_PASSWORD = adminCod3r123
@@ -13,3 +14,4 @@ EMAIL_PASS = dhyn vtpt zqkt mgwf
 EMAIL_SERVICE = gmail
 EMAIL_HOST = smtp.gmail.com
 NODE_ENV = develop
+RAILWAY = false
