Corrección inicio Github

--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@ HOST = localhost
 PORT = 8080
 MONGO_URI = mongodb+srv://cecic24:4193531@codercluster.8naffdo.mongodb.net/ecommerce
 GIT_CLIENT_ID = Iv1.49f5073f3369732a
+GIT_CLIENT_ID_RW = Iv23ctVXggoXNgeOEZbD
 GIT_CLIENT_SECRET = 7fa1211c05d40cfb7442f2da58b7d2b440cdc96c
+GIT_CLIENT_SECRET_RW = 7d6d5e310db20986481b2c6b319c3cfadcc01fad
 GIT_CALLBACK_URL = http://localhost:8080/api/sessions/githubcallback
 GIT_CALLBACK_URL_RW = https://back-coder-proyecto-final-production.up.railway.app/api/sessions/githubcallback
 JWT_SECRET = clave-super-secreta-jwt-backend
