Utilización de DTOs para usuarios resumidos + config rw

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 HOST = localhost
+RW_HOST = back-coder-proyecto-final-production.up.railway.app
 PORT = 8080
 MONGO_URI = mongodb+srv://cecic24:4193531@codercluster.8naffdo.mongodb.net/ecommerce
 GIT_CLIENT_ID = Iv1.49f5073f3369732a
@@ -16,4 +17,4 @@ EMAIL_PASS = dhyn vtpt zqkt mgwf
 EMAIL_SERVICE = gmail
 EMAIL_HOST = smtp.gmail.com
 NODE_ENV = develop
-RAILWAY = false
+RAILWAY = true
