Solución validaciones venv

--- a/.env
+++ b/.env
@@ -17,4 +17,4 @@ EMAIL_PASS = dhyn vtpt zqkt mgwf
 EMAIL_SERVICE = gmail
 EMAIL_HOST = smtp.gmail.com
 NODE_ENV = develop
-RAILWAY = true
+RAILWAY = false
